--- a/index.html
+++ b/index.html
@@ -2861,7 +2861,7 @@ window.application = new Application();
 			</rect>
 		</svg>
 	</div>
-	<img id="Behance" src="Behance.png" srcset="Behance.png 1x, Behance@2x.png 2x">
+	<img href="behance.com" id="Behance" src="Behance.png" srcset="Behance.png 1x, Behance@2x.png 2x">
 	<img id="Dribbble" src="Dribbble.png" srcset="Dribbble.png 1x, Dribbble@2x.png 2x">
 	<img id="Linkedin" src="Linkedin.png" srcset="Linkedin.png 1x, Linkedin@2x.png 2x">
 	<div onclick="application.goToTargetView(event)" id="_About">
