--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </div>
                 </div>
                 <div id="face-pic" style="padding-top: 45px;">
-                    <img class="profile" src="profile.JPG" alt="nolans face" />
+                    <img class="profile" src="profile.jpg" alt="nolans face" />
                 </div>
             </div>
         </div>
@@ -50,12 +50,12 @@
         </div>
         <div class="photography" style="width: 100%; margin-top: 20px">
             <div class="leftImages" style="display: flex; float: left; flex-wrap: wrap; flex-direction: column; align-items: flex-end;">
-                <img class="photo" src="lossless/1.JPG" alt="nolans face" />
-                <img class="photo" src="lossless/11.JPG" alt="nolans face" />
+                <img class="photo" src="lossless/1.jpg" alt="nolans face" />
+                <img class="photo" src="lossless/11.jpg" alt="nolans face" />
             </div>
             <div class="rightImages" style="display: flex; float: right; flex-wrap: wrap; flex-direction: column; padding-top: 70px;">
-                <img class="photo" src="lossless/2.JPG" alt="nolans face"  />
-                <img class="photo" src="lossless/12.JPG" alt="nolans face" />
+                <img class="photo" src="lossless/2.jpg" alt="nolans face"  />
+                <img class="photo" src="lossless/12.jpg" alt="nolans face" />
             </div>
         </div>
         <div style="width: 100%; display: flex; justify-content: center; padding-top: 50px; padding-bottom: 50px;">
