--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <h1>Nolan Perry</h1>
                         <h3>PHOTOGRAPHY</h3>
                         <p>I love all things visual. If you're interested in what I do, let me know.</p>
-                        <button class="button1">Reach Out</button>
+                        <a href="contact.html" class="button1">Reach Out</a>
                     </div>
                 </div>
                 <div id="face-pic" style="padding-top: 45px;">
@@ -38,9 +38,9 @@
                     <div>
                         <svg id="camera" width="60px" version="1.1" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g stroke-linecap="round" stroke-width="2" stroke="#80925A" fill="none" stroke-linejoin="round"><path d="M14.8792,10.1678c1.55702,1.55702 1.55702,4.08145 0,5.63847c-1.55702,1.55702 -4.08145,1.55702 -5.63847,0c-1.55702,-1.55702 -1.55702,-4.08145 -1.77636e-15,-5.63847c1.55702,-1.55702 4.08145,-1.55702 5.63847,-1.77636e-15"></path><path d="M21,9v9c0,1.105 -0.895,2 -2,2h-14c-1.105,0 -2,-0.895 -2,-2v-9c0,-1.105 0.895,-2 2,-2h2l1.462,-2.504c0.179,-0.307 0.508,-0.496 0.864,-0.496h5.304c0.351,0 0.676,0.184 0.857,0.484l1.513,2.516h2c1.105,0 2,0.895 2,2Z"></path></g><path fill="none" d="M0,0h24v24h-24v-24Z"></path></svg>
                         <h2>Photography</h2>
-                        <p>I use subjects in nature to portray
+                        <p style="padding-bottom: 30px;">I use subjects in nature to portray
                             moods within my photos.</p>
-                        <button class="button2">VIEW ALL PHOTOS</button>
+                        <a href="photos.html" class="button2">VIEW ALL PHOTOS</a>
                     </div>
                 </div>
                 <div style=" display: flex; align-items: center; justify-content: center;">
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div style="width: 100%; display: flex; justify-content: center; padding-top: 50px; padding-bottom: 50px;">
-            <button class="button1">View All Photos</button>
+            <a href="photos.html" class="button1">View All Photos</a>
         </div>
     </body>
     <footer>
