--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <link rel="icon" href="logo.png">
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="https://use.typekit.net/zvq0pet.css">
      <link rel="stylesheet" type="text/css" href="index.css">
    </head>
    <body>
-       <div style="display: flex; padding-top: 20px; justify-content: right; margin-right: 240px;">
-           <a href="index.html" class="button1">Home</a>
-       </div>
+      <div id="homeButton" style="display: flex; padding-top: 20px;">
+         <a href="index.html" class="button1">Home</a>
+     </div>
       <div id="holder">
 
          <div style="display: flex; justify-content: center; align-items: center;">
