--- a/photos.html
+++ b/photos.html
@@ -1,6 +1,7 @@
  <!DOCTYPE html>
 <html>
     <head>
+        <link rel="icon" href="logo.png">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://use.typekit.net/zvq0pet.css">
