--- a/contactPls.html
+++ b/contactPls.html
@@ -1,26 +1,24 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
-   <head>
-      <link rel="icon" href="logo.png">
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="https://use.typekit.net/zvq0pet.css">
-     <link rel="stylesheet" type="text/css" href="index.css">
-   </head>
-   <body>
-      <div id="homeButton" style="display: flex; padding-top: 20px;">
-         <a href="index.html" class="button1">Home</a>
-     </div>
-      <div>
-         <div class="mail">
-           <img src="images/mailboxdown.png"></img>
-         </div>
-
-         <div style="padding-bottom: 20px;" id="top">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://use.typekit.net/zvq0pet.css">
+        <link rel="stylesheet" type="text/css" href="index.css">
+        <link rel="icon" type="image/png" href="logo.png"/>
+        <title>Contact</title>
+    </head>
+    <body>
+        <div id="homeButton" style="display: flex; padding-top: 20px;">
+            <a href="index.html" class="button1">Home</a>
+        </div>
+        <div class="mail">
+            <img src="images/mailboxup.png"></img>
+        </div>
+        <div style="padding-bottom: 20px;" id="top">
             <h1 style="text-align: center;">Get in touch.</h1>
             <p style="text-align: center; color: #80925A">I hope to hear from you soon!</p>
          </div>
-
          <div id="mainContact" style="display: flex; justify-content: center; align-items: center;">
             <form action="https://formspree.io/maypjpnr" method="POST">
                <div id="topBox">
@@ -42,11 +40,9 @@
                </div>
             </form>
          </div>
-      </div>
-
-      <script src="js/scripts.js"></script>
+         <script src="js/scripts.js"></script>
       <footer>
         <div style="background-color: #2B2E30; padding: 0px; display: flex; justify-content: center; align-items: center;"><p style="color: white; font-size:15px;">&copy; Nolan Perry 2020</p></div>
     </footer>
-   </body>
-</html>
+    </body>
+</html> 
