--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <h1>Nolan Perry</h1>
                         <h3>PHOTOGRAPHY</h3>
                         <p>I love all things visual. If you're interested in what I do, let me know.</p>
-                        <a href="contact.html" class="button1">Reach Out</a>
+                        <a href="contactPls.html" class="button1">Reach Out</a>
                     </div>
                 </div>
                 <div id="face-pic" style="padding-top: 45px;">
