--- a/photos.html
+++ b/photos.html
@@ -22,7 +22,7 @@
                         <h2>Photography</h2>
                         <p>I use subjects in nature to portray
                             moods within my photos.</p>
-                        <a href="contact.html" class="button2">CONTACT ME</a>
+                        <a href="contactPls.html" class="button2">CONTACT ME</a>
                     </div>
                 </div>
                 <div style=" display: flex; align-items: center; justify-content: center;">
