Final w/validator check

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
    <head>
+      <title>Contact</title>
       <link rel="icon" href="logo.png">
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +14,7 @@
      </div>
       <div>
          <div class="mail">
-           <img src="images/mailboxdown.png"></img>
+           <img src="images/mailboxdown.png" alt="Mailbox">/>
          </div>
 
          <div style="padding-bottom: 20px;" id="top">
