--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,11 +25,11 @@
                         <h1>Nolan Perry</h1>
                         <h3>PHOTOGRAPHY</h3>
                         <p>I love all things visual. If you're interested in what I do, let me know.</p>
-                        <a href="contactPls.html" class="button1">Reach Out</a>
+                        <a href="contact.html" class="button1">Reach Out</a>
                     </div>
                 </div>
                 <div id="face-pic" style="padding-top: 45px;">
-                    <img class="profile" src="profile.jpg" alt="nolans face" />
+                    <img class="profile" src="profile.jpg" alt="Profile" />
                 </div>
             </div>
         </div>
@@ -45,25 +45,23 @@
                     </div>
                 </div>
                 <div style=" display: flex; align-items: center; justify-content: center;">
-                    <img id="walking" src="walking.png" alt="nolans face" />
+                    <img id="walking" src="walking.png" alt="Phototography" />
                 </div>
             </div>
         </div>
         <div class="photography" style="width: 100%; margin-top: 20px">
             <div class="leftImages" style="display: flex; float: left; flex-wrap: wrap; flex-direction: column; align-items: flex-end;">
-                <img class="photo" src="lossless/1.jpg" alt="nolans face" />
-                <img class="photo" src="lossless/11.jpg" alt="nolans face" />
+                <img class="photo" src="lossless/1.jpg" alt="Phototography" />
+                <img class="photo" src="lossless/11.jpg" alt="Phototography" />
             </div>
             <div class="rightImages" style="display: flex; float: right; flex-wrap: wrap; flex-direction: column; padding-top: 70px;">
-                <img class="photo" src="lossless/2.jpg" alt="nolans face"  />
-                <img class="photo" src="lossless/12.jpg" alt="nolans face" />
+                <img class="photo" src="lossless/2.jpg" alt="Phototography"  />
+                <img class="photo" src="lossless/12.jpg" alt="Phototography" />
             </div>
         </div>
         <div style="width: 100%; display: flex; justify-content: center; padding-top: 50px; padding-bottom: 50px;">
             <a href="photos.html" class="button1">View All Photos</a>
         </div>
+        <footer><div style="background-color: #2B2E30; padding: 0px; display: flex; justify-content: center; align-items: center;"><p style="color: white; font-size:15px;">&copy; Nolan Perry 2020</p></div></footer>
     </body>
-    <footer>
-        <div style="background-color: #2B2E30; padding: 0px; display: flex; justify-content: center; align-items: center;"><p style="color: white; font-size:15px;">&copy; Nolan Perry 2020</p></div>
-    </footer>
 </html>
