fixed image margin sorta

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
      </div>
       <div>
          <div class="mail">
-           <img src="images/mailboxdown.png" alt="Mailbox">/>
+           <img src="images/mailboxdown.png" alt="Mailbox">
          </div>
 
          <div style="padding-bottom: 20px;" id="top">
