--- a/photos.html
+++ b/photos.html
@@ -46,12 +46,12 @@
                 <img class="photo" src="lossless/21.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/23.jpg" alt="Phototography" />
             </div>
-            <div class="rightImages" style="display: flex; float: right; flex-wrap: wrap; flex-direction: column; padding-top: 70px;">
+            <div class="rightImages" style="display: flex; float: right; flex-wrap: wrap; flex-direction: column; padding-top: 70px">
                 <img class="photo" src="lossless/2.jpg" alt="Phototography"  />
                 <img class="photo" src="lossless/4.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/6.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/8.jpg" alt="Phototography" />
-                <img class="photo" src="lossless/10.jpg" alt="Phototography" />
+                <img style="margin-top: 30px;" class="photo" src="lossless/10.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/12.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/14.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/16.jpg" alt="Phototography" />
