added two delaware photos

--- a/photos.html
+++ b/photos.html
@@ -36,6 +36,7 @@
                 <img class="photo" src="lossless/1.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/3.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/5.jpg" alt="Phototography" />
+                <img class="photo" src="lossless/26.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/7.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/9.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/11.jpg" alt="Phototography" />
@@ -49,6 +50,7 @@
             <div class="rightImages" style="display: flex; float: right; flex-wrap: wrap; flex-direction: column; padding-top: 70px">
                 <img class="photo" src="lossless/2.jpg" alt="Phototography"  />
                 <img class="photo" src="lossless/4.jpg" alt="Phototography" />
+                <img class="photo" src="lossless/25.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/6.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/8.jpg" alt="Phototography" />
                 <img style="margin-top: 10px;" class="photo" src="lossless/10.jpg" alt="Phototography" />
