trying again to fix

--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@
          <a href="index.html" class="button1">Home</a>
      </div>
       <div>
-         <div class="mail">
-           <img src="images/mailboxup.png" alt="Mailbox">
+         <div>
+           <img class="mail" src="images/mailboxup.png" alt="Mailbox">
          </div>
 
          <div style="padding-bottom: 20px;" id="top">
