--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
          <a href="index.html" class="button1">Home</a>
      </div>
       <div>
-         <div>
+         <div style="text-align: center;">
            <img class="mail" src="images/mailboxup.png" alt="Mailbox">
          </div>
 
