--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                 <div id="face-pic" style="padding-top: 45px;">
-                    <img class="profile" src="profile.jpg" alt="Profile" />
+                    <img class="profile" src="profile2.jpg" alt="Profile" />
                 </div>
             </div>
         </div>
@@ -39,8 +39,7 @@
                     <div>
                         <svg id="camera" width="60px" version="1.1" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g stroke-linecap="round" stroke-width="2" stroke="#80925A" fill="none" stroke-linejoin="round"><path d="M14.8792,10.1678c1.55702,1.55702 1.55702,4.08145 0,5.63847c-1.55702,1.55702 -4.08145,1.55702 -5.63847,0c-1.55702,-1.55702 -1.55702,-4.08145 -1.77636e-15,-5.63847c1.55702,-1.55702 4.08145,-1.55702 5.63847,-1.77636e-15"></path><path d="M21,9v9c0,1.105 -0.895,2 -2,2h-14c-1.105,0 -2,-0.895 -2,-2v-9c0,-1.105 0.895,-2 2,-2h2l1.462,-2.504c0.179,-0.307 0.508,-0.496 0.864,-0.496h5.304c0.351,0 0.676,0.184 0.857,0.484l1.513,2.516h2c1.105,0 2,0.895 2,2Z"></path></g><path fill="none" d="M0,0h24v24h-24v-24Z"></path></svg>
                         <h2>Photography</h2>
-                        <p style="padding-bottom: 30px;">I use subjects in nature to portray
-                            moods within my photos.</p>
+                        <p style="padding-bottom: 30px;">I take portraits in nature to portray moods within my photos.</p>
                         <a href="photos.html" class="button2">VIEW ALL PHOTOS</a>
                     </div>
                 </div>
@@ -51,12 +50,12 @@
         </div>
         <div class="photography" style="width: 100%; margin-top: 20px">
             <div class="leftImages" style="display: flex; float: left; flex-wrap: wrap; flex-direction: column; align-items: flex-end;">
-                <img class="photo" src="lossless/1.jpg" alt="Phototography" />
-                <img class="photo" src="lossless/25.jpg" alt="Phototography" />
+                <img class="photo" src="lossless/30.jpg" alt="Phototography" />
+                <img class="photo" src="lossless/28.jpg" alt="Phototography" />
             </div>
             <div class="rightImages" style="display: flex; float: right; flex-wrap: wrap; flex-direction: column; padding-top: 70px;">
-                <img class="photo" src="lossless/2.jpg" alt="Phototography"  />
-                <img class="photo" src="lossless/26.jpg" alt="Phototography" />
+                <img class="photo" src="lossless/32.jpg" alt="Phototography"  />
+                <img class="photo" src="lossless/31.jpg" alt="Phototography" />
             </div>
         </div>
         <div style="width: 100%; display: flex; justify-content: center; padding-top: 50px; padding-bottom: 50px;">
