reworked design, added photos

--- a/index.html
+++ b/index.html
@@ -23,31 +23,31 @@
                 <div>
                     <div>
                         <h1>Nolan Perry</h1>
-                        <h3>PHOTOGRAPHY</h3>
-                        <p>I love all things visual. If you're interested in what I do, let me know.</p>
+                        <h3 style="color: #80925A;">PHOTOGRAPHY</h3>
+                        <p>I love portrait photography. If you're interested in my photos, let me know!</p>
                         <a href="contact.html" class="button1">Reach Out</a>
                     </div>
                 </div>
-                <div id="face-pic" style="padding-top: 45px;">
+                <div id="face-pic">
                     <img class="profile" src="profile2.jpg" alt="Profile" />
                 </div>
             </div>
         </div>
-        <div class="bioContainer" style="padding: 30px; background-color: #FBEFD6; margin-top: 50px; border-radius: 70px;">
+        <div class="bioContainer" style="padding: 25px; background-color: #FBEFD6; margin-top: 50px; border-radius: 70px;">
             <div id="bio" style="display: flex; justify-content: space-evenly; align-items: center;">
                 <div>
                     <div>
-                        <svg id="camera" width="60px" version="1.1" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g stroke-linecap="round" stroke-width="2" stroke="#80925A" fill="none" stroke-linejoin="round"><path d="M14.8792,10.1678c1.55702,1.55702 1.55702,4.08145 0,5.63847c-1.55702,1.55702 -4.08145,1.55702 -5.63847,0c-1.55702,-1.55702 -1.55702,-4.08145 -1.77636e-15,-5.63847c1.55702,-1.55702 4.08145,-1.55702 5.63847,-1.77636e-15"></path><path d="M21,9v9c0,1.105 -0.895,2 -2,2h-14c-1.105,0 -2,-0.895 -2,-2v-9c0,-1.105 0.895,-2 2,-2h2l1.462,-2.504c0.179,-0.307 0.508,-0.496 0.864,-0.496h5.304c0.351,0 0.676,0.184 0.857,0.484l1.513,2.516h2c1.105,0 2,0.895 2,2Z"></path></g><path fill="none" d="M0,0h24v24h-24v-24Z"></path></svg>
+                        <svg style="padding-top: 40px;" id="camera" width="60px" version="1.1" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g stroke-linecap="round" stroke-width="2" stroke="#80925A" fill="none" stroke-linejoin="round"><path d="M14.8792,10.1678c1.55702,1.55702 1.55702,4.08145 0,5.63847c-1.55702,1.55702 -4.08145,1.55702 -5.63847,0c-1.55702,-1.55702 -1.55702,-4.08145 -1.77636e-15,-5.63847c1.55702,-1.55702 4.08145,-1.55702 5.63847,-1.77636e-15"></path><path d="M21,9v9c0,1.105 -0.895,2 -2,2h-14c-1.105,0 -2,-0.895 -2,-2v-9c0,-1.105 0.895,-2 2,-2h2l1.462,-2.504c0.179,-0.307 0.508,-0.496 0.864,-0.496h5.304c0.351,0 0.676,0.184 0.857,0.484l1.513,2.516h2c1.105,0 2,0.895 2,2Z"></path></g><path fill="none" d="M0,0h24v24h-24v-24Z"></path></svg>
                         <h2>Photography</h2>
                         <p style="padding-bottom: 30px;">I take portraits in nature to portray moods within my photos.</p>
-                        <a href="photos.html" class="button2">VIEW ALL PHOTOS</a>
                     </div>
                 </div>
                 <div style=" display: flex; align-items: center; justify-content: center;">
-                    <img id="walking" src="walking.png" alt="Phototography" />
+                    <img id="walking" src="collage.png" alt="Phototography" />
                 </div>
             </div>
         </div>
+        <h4 style="color: #80925A; text-align: center; padding-top: 40px;">Most Recent</h4>
         <div class="photography" style="width: 100%; margin-top: 20px">
             <div class="leftImages" style="display: flex; float: left; flex-wrap: wrap; flex-direction: column; align-items: flex-end;">
                 <img class="photo" src="lossless/30.jpg" alt="Phototography" />
@@ -58,7 +58,7 @@
                 <img class="photo" src="lossless/31.jpg" alt="Phototography" />
             </div>
         </div>
-        <div style="width: 100%; display: flex; justify-content: center; padding-top: 50px; padding-bottom: 50px;">
+        <div style="width: 100%; display: flex; justify-content: center; padding-bottom: 50px;">
             <a href="photos.html" class="button1">View All Photos</a>
         </div>
         <footer><div style="background-color: #2B2E30; padding: 0px; display: flex; justify-content: center; align-items: center;"><p style="color: white; font-size:15px;">&copy; Nolan Perry 2020</p></div></footer>
