--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
    </head>
    <body>
       <div id="homeButton" style="display: flex; padding-top: 20px;">
-         <a href="index.html" class="button1">Home</a>
+         <a href="index.html" class="button"><img src="home.png" style="width: 50px; float:right;"></a>
      </div>
       <div>
          <div style="text-align: center;">
