--- a/photos.html
+++ b/photos.html
@@ -11,30 +11,17 @@
         </title>
     </head>
     <body>
-        <div id="homeButton" style="display: flex; padding-top: 20px;">
-            <a href="index.html" class="button1">Home</a>
-        </div>
-        <div class="bioContainer" style="padding: 30px; background-color: #FBEFD6; margin-top: 50px; border-radius: 70px;">
-            <div id="bio" style="display: flex; justify-content: space-evenly; align-items: center;">
-                <div>
-                    <div>
-                        <svg id="camera" width="60px" version="1.1" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g stroke-linecap="round" stroke-width="2" stroke="#80925A" fill="none" stroke-linejoin="round"><path d="M14.8792,10.1678c1.55702,1.55702 1.55702,4.08145 0,5.63847c-1.55702,1.55702 -4.08145,1.55702 -5.63847,0c-1.55702,-1.55702 -1.55702,-4.08145 -1.77636e-15,-5.63847c1.55702,-1.55702 4.08145,-1.55702 5.63847,-1.77636e-15"></path><path d="M21,9v9c0,1.105 -0.895,2 -2,2h-14c-1.105,0 -2,-0.895 -2,-2v-9c0,-1.105 0.895,-2 2,-2h2l1.462,-2.504c0.179,-0.307 0.508,-0.496 0.864,-0.496h5.304c0.351,0 0.676,0.184 0.857,0.484l1.513,2.516h2c1.105,0 2,0.895 2,2Z"></path></g><path fill="none" d="M0,0h24v24h-24v-24Z"></path></svg>
-                        <h2>Photography</h2>
-                        <p>I take portraits in nature to portray moods within my photos.</p>
-                        <a href="contact.html" class="button2">CONTACT ME</a>
-                    </div>
-                </div>
-                <div style=" display: flex; align-items: center; justify-content: center;">
-                    <img id="walking" src="walking.png" alt="Walking Graphic" />
-                </div>
-            </div>
-        </div>
-        <h2 style="text-align: center; padding-top: 50px; color: #80925A;">All Photos</h2>
-        <div class="photography" style="width: 100%; margin-top: 20px">
+        <div id="container" style="white-space:nowrap"></div>
+            <div id="homeButton" style="display: flex; padding-top: 20px;">
+              <a href="index.html" class="button"><img src="home.png" style="width: 50px; float:right;"></a>
+         </div>
+         <h4 style="text-align: center; color: #80925A;">All Photos</h4>
+         </div>
             <div class="leftImages" style="display: flex; float: left; flex-wrap: wrap; flex-direction: column; align-items: flex-end;">
                 <img class="photo" src="lossless/30.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/28.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/29.jpg" alt="Phototography" />
+                <img class="photo" src="lossless/34.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/1.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/3.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/5.jpg" alt="Phototography" />
@@ -53,6 +40,7 @@
                 <img class="photo" src="lossless/32.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/31.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/27.jpg" alt="Phototography" />
+                <img class="photo" src="lossless/33.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/2.jpg" alt="Phototography"  />
                 <img class="photo" src="lossless/4.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/25.jpg" alt="Phototography" />
