--- a/photos.html
+++ b/photos.html
@@ -18,6 +18,8 @@
          <h4 style="text-align: center; color: #80925A;">All Photos</h4>
          </div>
             <div class="leftImages" style="display: flex; float: left; flex-wrap: wrap; flex-direction: column; align-items: flex-end;">
+                <img class="photo" src="lossless/35.jpg" alt="Phototography" />
+                <img class="photo" src="lossless/37.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/30.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/28.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/29.jpg" alt="Phototography" />
@@ -37,6 +39,7 @@
                 <img class="photo" src="lossless/23.jpg" alt="Phototography" />
             </div>
             <div class="rightImages" style="display: flex; float: right; flex-wrap: wrap; flex-direction: column; padding-top: 70px">
+                <img class="photo" src="lossless/36.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/32.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/31.jpg" alt="Phototography" />
                 <img class="photo" src="lossless/27.jpg" alt="Phototography" />
