--- a/contact.html
+++ b/contact.html
@@ -9,33 +9,31 @@
      <link rel="stylesheet" type="text/css" href="index.css">
    </head>
    <body>
-      <div id="homeButton" style="display: flex; padding-top: 20px;">
-         <a href="index.html" class="button"><img src="home.png" style="width: 50px; float:right;"></a>
-     </div>
-      <div>
-         <div style="text-align: center;">
-           <img class="mail" src="images/mailboxup.png" alt="Mailbox">
-         </div>
-
-         <div style="padding-bottom: 20px;" id="top">
-            <h1 style="text-align: center;">Get in touch.</h1>
-            <p style="text-align: center; color: #80925A">I hope to hear from you soon!</p>
+      <div class="topnav">
+         <a href="index.html">Introduction</a>
+         <a href="gallery.html">Gallery</a>
+         <a class="active" href="#contact">Contact</a>
+       </div>
+         <h1 style="text-align: center; align-items: center;">Contact Me</h1>
+         <br>
+             <div class="square"></div>
+            <h5 style="text-align: center; color: #A7A7A7; padding-top: 25px; padding-bottom: 100px;">I hope to hear from you soon!</h5>
          </div>
 
          <div id="mainContact" style="display: flex; justify-content: center; align-items: center;">
             <form action="https://formspree.io/maypjpnr" method="POST">
                <div id="topBox">
                   <div id="nameBox">
-                     <p style=" color:#949494; font-size: 18px;">Name</p>
+                     <p id="contactP" style=" color:#949494; font-size: 18px;">Name</p>
                      <input class="input" type="text" name="name">
                   </div>
                   <div id="emailBox">
-                     <p style="color:#949494; font-size: 18px;">Email</p>
+                     <p id="contactP" style="color:#949494; font-size: 18px;">Email</p>
                      <input class="input" type="email" name="_replyto">
                   </div>
                </div>
                <div id="messageBox">
-                  <p style="color:#949494; font-size: 18px;">Message</p><br /><textarea id="messageField" name="message"></textarea>
+                  <p id="contactP" style="color:#949494; font-size: 18px;">Message</p><br /><textarea id="messageField" name="message"></textarea>
                </div>
                <input type="text" name="_gotcha" style="display:none" />
                <div style="text-align: center; padding-top: 30px; padding-bottom: 10px;">
@@ -45,7 +43,7 @@
          </div>
       </div>
       <footer>
-        <div style="background-color: #2B2E30; padding: 0px; display: flex; justify-content: center; align-items: center;"><p style="color: white; font-size:15px;">&copy; Nolan Perry 2020</p></div>
+        <div style="background-color: #2B2E30; padding: 0px; display: flex; justify-content: center; align-items: center;"><h5 style="color: white; font-size:15px;">&copy; Nolan Perry 2020</h5></div>
     </footer>
    </body>
 </html>
