--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
              <br>
              <br>
              <br>
-             <div id="face-pic">
-                <img class="profile" src="profile.jpg" alt="Profile picture" />
-            </div>
-            <h2 style="text-align: center;">Nolan Perry</h2>
-            <h5 style="text-align: center; line-height: 38px; margin: -40px;"> Photography & visuals</h5>
+            <img class="profile" src="profile.jpg" alt="Profile picture"/>
+                <h2 style="text-align: center; min-width: 200px;">Nolan Perry</h2>
+                <h5 style="text-align: center; line-height: 38px; margin: -30px; padding-bottom: 50px;"> Photography & visuals</h5>
              <div class="bioContainer">
                 <div id="bio" style="display: flex; justify-content: space-evenly; align-items: center; margin: 0;">
                     <div id="collage" style=" display: flex;">
@@ -42,11 +40,10 @@
                 </div>
             </div>
         <div id="break" style="text-align: center; word-wrap: break-word;">
-            <h2 style="word-wrap: auto; width: auto; line-height: 50px;">Check out more of what I do:</h2>
-            <img width="50px" src="be.png"/>
-             <img style="padding-left: 20px; padding-right: 20px;" width="50px" src="dr.png"/>
-             <img width="50px" src="in.png"/>
-          </div>
+            <h1 style="word-wrap: auto; width: auto; line-height: 50px; font-size:calc(30px + 1.5vw);">Check out more of what I do:</h1>
+            <a class="button2" href="https://www.behance.net/nolanperry"><img class="center" style="width: 65px;" src="be.png"></button>
+            <a class="button2" href="https://dribbble.com/nolanperry"><img class="center" style="width: 65px; padding-left: 20px; padding-right: 20px;" src="dr.png"></button>
+            <a class="button2" href="https://www.linkedin.com/in/nolan-perry-a871a91b0/"><img class="center" style="width: 65px;" src="in.png"></button>
         <div class="bioContainer">
             <div id="bio" style="display: flex; justify-content: space-evenly; align-items: center;">
                 <div>
@@ -57,7 +54,7 @@
                     </div>
                 </div>
                 <div id="collage" style=" display: flex; align-items: center; justify-content: center;">
-                    <img id="graphics1" srcset="macey_mobile.png 1000w, macey_desk.png 2000w"/>
+                    <img id="graphics" srcset="macey_mobile.png 1000w, macey_desk.png 2000w"/>
                 </div>
             </div>
         </div>
