--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,6 @@
       <link rel="icon" href="logo.png">
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="https://use.typekit.net/zvq0pet.css">
      <link rel="stylesheet" type="text/css" href="index.css">
    </head>
    <body>
@@ -17,9 +16,7 @@
          <h1 style="text-align: center; align-items: center;">Contact Me</h1>
          <br>
              <div class="square"></div>
-            <h5 style="text-align: center; color: #A7A7A7; padding-top: 25px; padding-bottom: 100px;">I hope to hear from you soon!</h5>
-         </div>
-
+            <h5 id="space" style="text-align: center; color: #A7A7A7; padding-top: 25px;">I hope to hear from you soon!</h5>
          <div id="mainContact" style="display: flex; justify-content: center; align-items: center;">
             <form action="https://formspree.io/maypjpnr" method="POST">
                <div id="topBox">
@@ -41,7 +38,6 @@
                </div>
             </form>
          </div>
-      </div>
       <footer>
         <div style="background-color: #2B2E30; padding: 0px; display: flex; justify-content: center; align-items: center;"><h5 style="color: white; font-size:15px;">&copy; Nolan Perry 2020</h5></div>
     </footer>
