--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://use.typekit.net/zvq0pet.css">
         <link rel="stylesheet" type="text/css" href="index.css">
         <link rel="icon" type="image/png" href="logo.png"/>
         <title>
@@ -41,9 +40,9 @@
             </div>
         <div id="break" style="text-align: center; word-wrap: break-word;">
             <h1 style="word-wrap: auto; width: auto; line-height: 50px; font-size:calc(30px + 1.5vw);">Check out more of what I do:</h1>
-            <a class="button2" href="https://www.behance.net/nolanperry"><img class="center" style="width: 65px;" src="be.png"></button>
-            <a class="button2" href="https://dribbble.com/nolanperry"><img class="center" style="width: 65px; padding-left: 20px; padding-right: 20px;" src="dr.png"></button>
-            <a class="button2" href="https://www.linkedin.com/in/nolan-perry-a871a91b0/"><img class="center" style="width: 65px;" src="in.png"></button>
+            <a class="button2" href="https://www.behance.net/nolanperry"><img class="center" style="width: 65px;" src="be.png">
+            <a class="button2" href="https://dribbble.com/nolanperry"><img class="center" style="width: 65px; padding-left: 20px; padding-right: 20px;" src="dr.png">
+            <a class="button2" href="https://www.linkedin.com/in/nolan-perry-a871a91b0/"><img class="center" style="width: 65px;" src="in.png">
         <div class="bioContainer">
             <div id="bio" style="display: flex; justify-content: space-evenly; align-items: center;">
                 <div>
