--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,6 @@
         <link rel="icon" href="logo.png">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://use.typekit.net/zvq0pet.css">
         <link rel="stylesheet" type="text/css" href="index.css">
         <title>
             Photography
@@ -19,8 +18,6 @@
             <h1 style="text-align: center; align-items: center;">Photo Gallery</h1>
             <br>
              <div class="square"></div>
-         </div>
-         </div>
          <h4 style="display: flex; flex-direction: column; align-items: center; margin: auto; padding-top:50px;">October 2020</h4>
             <div class="leftImages" style="display: flex; float: left; flex-wrap: wrap; flex-direction: column; align-items: flex-end;">
                 <img class="photo" src="lossless/35.jpg" alt="Phototography" />
@@ -37,7 +34,11 @@
             <img class="photo" src="lossless/29.jpg" alt="Phototography" />
             <img class="photo" src="lossless/27.jpg" alt="Phototography" />
             <img class="photo" src="lossless/26.jpg" alt="Phototography" />
+            <img class="photo" src="lossless/41.jpg" alt="Phototography" />
             <img class="photo" src="lossless/33.jpg" alt="Phototography" />
+            <img class="photo" src="lossless/42.jpg" alt="Phototography" />
+            <img class="photo" src="lossless/43.jpg" alt="Phototography" />
+            <img class="photo" src="lossless/46.jpg" alt="Phototography" />
         </div>
         <div class="rightImages" style="display: flex; float: right; flex-wrap: wrap; flex-direction: column; padding-top: 70px">
             <img class="photo" src="lossless/28.jpg" alt="Phototography" />
@@ -45,6 +46,10 @@
             <img class="photo" src="lossless/25.jpg" alt="Phototography" />
             <img class="photo" src="lossless/40.jpg" alt="Phototography" />
             <img class="photo" src="lossless/34.jpg" alt="Phototography" />
+            <img class="photo" src="lossless/44.jpg" alt="Phototography" />
+            <img class="photo" src="lossless/45.jpg" alt="Phototography" />
+            <img class="photo" src="lossless/47.jpg" alt="Phototography" />
+            <img class="photo" src="lossless/48.jpg" alt="Phototography" />
         </div>
         <div style="width: 100%; display: flex; justify-content: center;">
             <h4 style="display: flex; flex-direction: column; align-items: center; margin: auto;">May 2020</h4>
@@ -108,7 +113,7 @@
         </div>
         <h2 style="text-align: center; width: 100%; display: flex; justify-content: center; padding-top: 100px; word-wrap: auto; margin: auto;">Head back up to the top</h2>
         <div style="width: 100%; display: flex; justify-content: center; padding-top: 10px; padding-bottom: 50px;">
-            <a class="button2" href="#top"><img class="center" style="width: 15%; display: block; margin-right: auto; margin-left: auto;" src="arrow.png"></button>
+            <a class="button2" href="#top"><img class="center" style="width: 40%; display: block; margin-right: auto; margin-left: auto;" src="arrow.png">
         </div>
         <footer>
             <div style="background-color: #2B2E30; padding: 0px; display: flex; justify-content: center; align-items: center;"><h5 style="color: white; font-size:15px;">&copy; Nolan Perry 2020</h5></div>
