--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                 <h2 style="text-align: center; min-width: 200px;">Nolan Perry</h2>
                 <h5 style="text-align: center; line-height: 38px; margin: -30px; padding-bottom: 50px;"> Photography & visuals</h5>
              <div class="bioContainer">
-                <div id="bio" style="display: flex; justify-content: space-evenly; align-items: center; margin: 0;">
+                <div id="bio" style="display: flex; justify-content: space-evenly; align-items: center; margin: auto;">
                     <div id="collage" style=" display: flex;">
                         <img id="graphics" srcset="lauren_mobile.png 1000w, lauren_desk.png 2000w"/>
                     </div>
-                    <div>
+                <div>
                         <div id="homepanels"> 
                             <h1 id="h1center" >Nature + Portraiture.</h1>
                             <p style="padding-bottom: 25px;">Using photography to capture moments from beautiful landscapes is something I've always enjoyed; but so has been using it to capture others' emotion. So, why not combine the two?</p>
@@ -52,7 +52,7 @@
                         <a href="gallery.html" class="button1">View Gallery</a>
                     </div>
                 </div>
-                <div id="collage" style=" display: flex; align-items: center; justify-content: center;">
+                <div id="collage" style="display: flex; align-items: center; justify-content: center;">
                     <img id="graphics" srcset="macey_mobile.png 1000w, macey_desk.png 2000w"/>
                 </div>
             </div>
