--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h2 style="text-align: center; min-width: 200px;">Nolan Perry</h2>
                 <h5 style="text-align: center; line-height: 38px; margin: -30px; padding-bottom: 50px;"> Photography & visuals</h5>
              <div class="bioContainer">
-                <div id="bio" style="display: flex; justify-content: space-evenly; align-items: center; margin: auto;">
+                <div id="bio" style="display: flex; justify-content: space-evenly; align-items: center; margin: auto; flex-shrink: 0;">
                     <div id="collage" style=" display: flex;">
                         <img id="graphics" srcset="lauren_mobile.png 1000w, lauren_desk.png 2000w"/>
                     </div>
