--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div>
                     <div id="homepanels">
                         <h1 id="h1center">A Space of Opportunity.</h1>
-                        <p style="padding-bottom: 25px;">Photography has been a hobby of mine for about three years. It is very exciting to be able to explore the beauty of nature with friends and family, and to take some aweome photos with them along the way.</p>
+                        <p style="padding-bottom: 25px;">Photography has been a hobby of mine for about three years. It is very exciting to be able to explore the beauty of nature with friends and family, and to take some awesome photos with them along the way.</p>
                         <a href="gallery.html" class="button1">View Gallery</a>
                     </div>
                 </div>
