--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,15 @@
         <title>
             Photography
         </title>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PPNN5HR49B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PPNN5HR49B');
+</script>
     </head>
     <body>
         <div class="topnav">
