panel bear tracking

--- a/gallery.html
+++ b/gallery.html
@@ -29,7 +29,7 @@
         <div style="width: 100%; display: flex; justify-content: center;">
             <h4 style="display: flex; flex-direction: column; align-items: center; margin: auto;">July 2020</h4>
         </div>
-        <div class="leftImages" style="display: flex; float: left; flex-wrap: wrap; flex-direction: column; align-items: flex-end;">
+        <div class="leftImages" style="display: flex; float: left; flex-wrap: wrap; flex-direction: column; align-items: flex-end; animation: leftGallery;">
             <img class="photo" src="lossless/30.jpg" alt="Phototography" />
             <img class="photo" src="lossless/29.jpg" alt="Phototography" />
             <img class="photo" src="lossless/27.jpg" alt="Phototography" />
