--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
     <head>
         <script async defer data-domain="nolanperry.me" src="https://plausible.io/js/plausible.js"></script>
+        <!-- Panelbear Analytics - We respect your privacy --><script async src="https://cdn.panelbear.com/analytics.js?site=9LioAh1LCRL"></script><script>    window.panelbear = window.panelbear || function(){ window.panelbearQ = window.panelbearQ || []; panelbearQ.push(arguments); };
+    panelbear('config', { site: '9LioAh1LCRL' });
+</script>
+
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="index.css">
