--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
    </head>
    <body>
       <div class="topnav">
-         <a href="index.html">Introduction</a>
+         <a href="index.html">Home</a>
          <a href="gallery.html">Gallery</a>
          <a class="active" href="#contact">Contact</a>
        </div>
