--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="topnav">
-            <a href="index.html">Introduction</a>
+            <a href="index.html">Home</a>
             <a class="active" href="#gallery">Gallery</a>
             <a href="contact.html">Contact</a>
           </div>
@@ -107,7 +107,7 @@
         </div>
 
         <h2 style="text-align: center; width: 100%; display: flex; justify-content: center; word-wrap: auto; margin: auto;">Feel free to contact me!</h2>
-        <h5 style="text-align: center; color: #A7A7A7;">I'd love to hear from you.</h5>
+        <h5 style="text-align: center; color: #A7A7A7;">I hope to hear from you soon!</h5>
         <div style="width: 100%; display: flex; justify-content: center; padding-top: 10px;">
             <a class="button1" href="contact.html">Contact</a>
         </div>
