--- a/index.html
+++ b/index.html
@@ -16,19 +16,18 @@
     </head>
     <body>
         <div class="topnav">
-            <a class="active" href="#introduction">Introduction</a>
+            <a class="active" href="#introduction">Home</a>
             <a href="gallery.html">Gallery</a>
             <a href="contact.html">Contact</a>
           </div>
-            <h1 style="text-align: center; align-items: center;">An Introduction</h1>
+            <h1 style="text-align: center; align-items: center;">Nolan Perry</h1>
             <br>
              <div class="square"></div>
              <br>
              <br>
              <br>
+             <h5 style="text-align: center; line-height: 38px; margin: -30px; padding-bottom: 50px;"> Photography & visuals</h5>
             <img class="profile" src="profile.jpg" alt="Profile picture"/>
-                <h2 style="text-align: center; min-width: 200px;">Nolan Perry</h2>
-                <h5 style="text-align: center; line-height: 38px; margin: -30px; padding-bottom: 50px;"> Photography & visuals</h5>
              <div class="bioContainer">
                 <div id="bio" style="display: flex; justify-content: space-evenly; align-items: center; margin: auto;">
                     <div id="collage">
@@ -45,9 +44,9 @@
             </div>
         <div id="break" style="text-align: center; word-wrap: break-word;">
             <h1 style="word-wrap: auto; width: auto; line-height: 50px; font-size:calc(30px + 1.5vw);">Check out more of what I do:</h1>
+            <a class="button2" href="https://unsplash.com/@nolanperry"><img class="center" style="width: 65px;" src="un.png">
+                <a class="button2" href="https://dribbble.com/nolanperry"><img class="center" style="width: 65px; padding-left: 20px; padding-right: 20px;" src="dr.png">
             <a class="button2" href="https://www.behance.net/nolanperry"><img class="center" style="width: 65px;" src="be.png">
-            <a class="button2" href="https://dribbble.com/nolanperry"><img class="center" style="width: 65px; padding-left: 20px; padding-right: 20px;" src="dr.png">
-            <a class="button2" href="https://www.linkedin.com/in/nolan-perry-a871a91b0/"><img class="center" style="width: 65px;" src="in.png">
         <div class="bioContainer">
             <div id="bio" style="display: flex; justify-content: space-evenly; align-items: center;">
                 <div>
