--- a/gallery.html
+++ b/gallery.html
@@ -18,6 +18,15 @@
             <h1 style="text-align: center; align-items: center;">Photo Gallery</h1>
             <br>
              <div class="square"></div>
+             <h4 style="display: flex; flex-direction: column; align-items: center; margin: auto; padding-top:50px;">January 2021</h4>
+            <div class="leftImages" style="display: flex; float: left; flex-wrap: wrap; flex-direction: column; align-items: flex-end;">
+                <img class="photo" src="lossless/49_l.jpg" alt="Phototography" />
+                <img class="photo" src="lossless/51_l.jpg" alt="Phototography" />
+            </div>
+            <div class="rightImages" style="display: flex; float: right; flex-wrap: wrap; flex-direction: column; padding-top: 70px">
+                <img class="photo" src="lossless/50_r.jpg" alt="Phototography" />
+            </div>
+        <div style="width: 100%; display: flex; justify-content: center;"></div>
          <h4 style="display: flex; flex-direction: column; align-items: center; margin: auto; padding-top:50px;">October 2020</h4>
             <div class="leftImages" style="display: flex; float: left; flex-wrap: wrap; flex-direction: column; align-items: flex-end;">
                 <img class="photo" src="lossless/35.jpg" alt="Phototography" />
@@ -105,6 +114,7 @@
         <div class="rightImages" style="display: flex; float: right; flex-wrap: wrap; flex-direction: column; padding-top: 70px">
             <img class="photo" src="lossless/17.jpg" alt="Phototography" />
         </div>
+        
 
         <h2 style="text-align: center; width: 100%; display: flex; justify-content: center; word-wrap: auto; margin: auto;">Feel free to contact me!</h2>
         <h5 style="text-align: center; color: #A7A7A7;">I hope to hear from you soon!</h5>
